--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
-Django==5.0.1
+# Django==5.0.1
+# djangorestframework==3.14.0
+# djangorestframework-simplejwt==5.3.1
+# psycopg2-binary==2.9.9
+# python-decouple==3.8
+# django-cors-headers==4.3.1
+# Pillow==10.2.0
+# django-filter==23.5
+
+
+Django>=5.1.3
+Pillow>=11.0.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 psycopg2-binary==2.9.9
 python-decouple==3.8
 django-cors-headers==4.3.1
-Pillow==10.2.0
 django-filter==23.5
